--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>tyring to making website</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header class="header">
+        <h1 class="title">junaid rahaman </h1>
+        <p class="birth-date">05-1-2005</p>
+<section>
+    <blockquote class="tribute">"Design is not  just what it looks like and feels like ,design is how it works "</blockquote>
+    <img src="junaid.jpg" alt="" height="100px weight=200px"/>
+</section>
 
+    </header>
+</body>
+</html>
