--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
     <header class="header">
         <h1 class="title">junaid rahaman </h1>
         <p class="birth-date">05-1-2005</p>
-<section>
-    <blockquote class="tribute">"Design is not  just what it looks like and feels like ,design is how it works "</blockquote>
+<section class="blog1">
+    <blockquote class="tribute"> "Design is not  
+        just what it looks like and feels like ,
+        design is how it works "
+    </blockquote>
+    
     <img src="junaid.jpg" alt="" height="100px weight=200px"/>
+
 </section>
 
     </header>
